correction bug + changement style scss